// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example schema queries query simple field scope (unauthorized) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Not authorized to resolve Query.forAdmin],
  ],
}
`;

exports[`example schema queries query simple field scope 1`] = `
Object {
  "data": Object {
    "forAdmin": "ok",
  },
}
`;

exports[`example schema query field scope with loader (unauthorized) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Not authorized to resolve Query.forDeferredAdmin],
  ],
}
`;

exports[`example schema query field scope with loader 1`] = `
Object {
  "data": Object {
    "forDeferredAdmin": "ok",
  },
}
`;

exports[`example schema query field scope with loader with arg (unauthorized) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Not authorized to resolve Query.forPermission],
  ],
}
`;

exports[`example schema query field scope with loader with arg 1`] = `
Object {
  "data": Object {
    "forPermission": "ok",
  },
}
`;

exports[`example schema query field with $all (admin, unauthorized) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Not authorized to resolve Query.forAll],
  ],
}
`;

exports[`example schema query field with $all (unauthorized) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Not authorized to resolve Query.forAll],
  ],
}
`;

exports[`example schema query field with $all 1`] = `
Object {
  "data": Object {
    "forAll": "ok",
  },
}
`;

exports[`example schema query field with $any (admin) 1`] = `
Object {
  "data": Object {
    "forAny": "ok",
  },
}
`;

exports[`example schema query field with $any (unauthorized) 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Not authorized to resolve Query.forAny],
  ],
}
`;

exports[`example schema query field with $any 1`] = `
Object {
  "data": Object {
    "forAny": "ok",
  },
}
`;
